--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,4 @@
 @charset "UTF-8";
-/*!
-* Start Bootstrap - Small Business v5.0.4 (https://startbootstrap.com/template/small-business)
-* Copyright 2013-2022 Start Bootstrap
-* Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-small-business/blob/master/LICENSE)
-*/
-/*!
- * Bootstrap v5.1.3 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- beginof
- */
-
 
 #map{
     height: 400px;
@@ -33,9 +20,26 @@
 
 /* user edit page */
 .delete-user-button{
-
+/* beginof */
   padding: 10px;
   margin: 10px;
+}
+
+/* removes some google maps stuff to give map cleaner look */
+.gm-svpc, .gmnoprint{
+  visibility: hidden;
+}
+
+/* show page map stuff */
+#map{
+  padding: 10px;
+  margin: 10px;
+}
+#mappy{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: stretch;
 }
 
 #tester{
@@ -22707,6 +22711,10 @@ textarea.form-control-lg {
   height: 4rem;
   width: 4rem;
   font-size: 2rem;
+}
+
+#created-by{
+  font-size: 20px;
 }
 
 /*end of Show page styling*/
