--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,5 @@
 
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container px-5">
             <a class="navbar-brand" href="/">Rosie's Travel App</a>
@@ -6,7 +7,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <%if(isLoggedIn){%>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/trips">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="/users/<%=userId%>">My Trips</a></li>
                         <li class="nav-item"><a class="nav-link" href="/users/<%=userId%>/edit">Account</a></li>
                         <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
