--- a/views/trips/index.ejs
+++ b/views/trips/index.ejs
@@ -6,7 +6,7 @@
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
 <!-- MDB -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css" rel="stylesheet"/>
+<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css" rel="stylesheet"/> -->
 <!-- LOGIN MODAL  -->
 <link href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -278,20 +278,10 @@ data-mdb-ride="carousel"
   </div>
 </div>
 <!-- END CREATE USER MODAL -->
-
-
-
-
-
-
-
-
-
-
     </html>
      <!-- Footer-->
      <footer class="py-5 bg-dark">
-      <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+      <div class="container px-5"><p class="m-0 text-center text-white">Template courtesy of Boostrap@5</p></div>
   </footer>
 </html>
 </html>
