--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -7,13 +7,13 @@
         <nav>
             <%-include ('../partials/nav.ejs')%>
         </nav>
-        <h2>Hello, <%=user.name%>.</h2>
-        <h1 class="">Start Planning for the trip of a lifetime!</h1>
+        
 
         <header class="bg-dark py-5">
-        
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
+        <h2 class="text-center text-white">Hello, <%=user.name%>.</h2>
+        <h1 class="text-center text-white">Start Planning for the trip of a lifetime!</h1>
                     <div class="col-lg-6">
                         <div class="text-center my-5">
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
@@ -24,10 +24,10 @@
 <!-- FUNCTION TO ADD TRIPS TO PAGE FOR SPECIFIC USER -->
 <%}else{%>
     <h2 class="display-6 font-weight-light text-white mb-3">Here are your trips:</h2>
-    <ul class="trips">
+    <ul class="list-unstyled">
         <%user.trips.forEach((trip)=>{%>
             <!-- LISTS USERS TRIPS BY CITY ONLY HREF TIED TO TRIP SHOW ROUTE -->
-            <li><a href="/trips/<%=trip._id%>" class="font-weight-light text-white sm-9"><%=trip.tripName%></a></li>
+            <li class="d-inline display-7 text-white-50 mb-4"><a href="/trips/<%=trip._id%>" class="font-weight-light text-white sm-9"><%=trip.tripName%></a></li>
             <%})%>
     </ul>
 <%}%>
@@ -126,12 +126,11 @@
       </div>
     <!-- Footer-->
     <footer class="py-5 bg-dark">
-        <div class="container px-5"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+        <div class="container px-5"><p class="m-0 text-center text-white">Template courtesy of Boostrap@5</p></div>
     </footer>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
