--- a/views/trips/edit.ejs
+++ b/views/trips/edit.ejs
@@ -40,7 +40,7 @@
                     <h4>Activities:</h4>
                     <ul class="list-unstyled">
                         <%for(let i=0; i < trip.activities.length; i++){%>
-                            <li class="d-inline display-7 text-white-50 mb-4">
+                            <li class="d-inline display-7"  id="activiy-on-edit-page">
                                 <%=trip.activities[i]%>
                             </li>
                             <%}%>
